# AD-Census

./: .gitignore  AD-Census-vs2019.sln  README.md
AD-Census/: AD-Census-v19.vcxproj  ADCensusStereo.cpp  ADCensusStereo.h  CMakeLists.txt  adcensus_types.h  adcensus_util.cpp  adcensus_util.h  cost_aggregator_2.cpp  cost_aggregator_2.h  cost_computor.cpp  cost_computor.h  cross_aggregator.cpp  cross_aggregator.h  main.cpp  multistep_refiner.cpp  multistep_refiner.h  scanline_optimizer.cpp  文件名.txt
AD-Census/Release/AD-Census-v19.tlog/: AD-Census-v19.lastbuildstate  CL.command.1.tlog
AD-Census/x64/Debug/: AD-Census-v19.exe.recipe  adcensus_util.obj.enc  adcensusstereo.obj.enc  cost_aggregator_2.obj.enc  cost_computor.obj.enc  vc143.idb
AD-Census/x64/Debug/AD-Census-v19.tlog/: AD-Census-v19.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AD-Census/x64/Release/: AD-Census-v19.exe.recipe  AD-Census-v19.iobj  AD-Census-v19.ipdb
AD-Census/x64/Release/AD-Census-v19.tlog/: AD-Census-v19.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
